tests/testcases/errors/BCE0088-1.boo
"""
BCE0088-1.boo(11,5): BCE0088: Sorry but the '___' prefix is reserved by the compiler. Friends?
BCE0088-1.boo(13,9): BCE0088: Sorry but the 'get_' prefix is reserved by the compiler. Friends?
BCE0088-1.boo(16,9): BCE0088: Sorry but the 'set_' prefix is reserved by the compiler. Friends?
BCE0088-1.boo(19,9): BCE0088: Sorry but the 'add_' prefix is reserved by the compiler. Friends?
BCE0088-1.boo(22,9): BCE0088: Sorry but the 'remove_' prefix is reserved by the compiler. Friends?
BCE0088-1.boo(25,9): BCE0088: Sorry but the 'raise_' prefix is reserved by the compiler. Friends?
"""
class Invalid:
	
	___invalid

	def get_foo():
		pass
		
	def set_foo():
		pass
		
	def add_foo():
		pass
		
	def remove_foo():
		pass
		
	def raise_foo():
		pass
